--- a/분류(평가).ipynb
+++ b/분류(평가).ipynb
@@ -123,7 +123,7 @@
    "id": "fb0bc196",
    "metadata": {},
    "source": [
-    "# 재현율 recall: 실제 양성 값 중 양성으로 예측한 값의 비율\n",
+    "# 재현율 recall: 실제 양성 값 중 양성으로 예측한 값의 비율/ 진짜양성비율\n",
     "                           TP/(TP+FN)"
    ]
   },
