--- a/분류(평가).ipynb
+++ b/분류(평가).ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "source": [
     "# 정밀도 precision: 양성이라고 예측한 값 중 실제 양성인 값의 비율 \n",
-    "                                  TP/(TP+FP) "
+    "TP(1,1) FN(0,1)     TP/(TP+FP) "
    ]
   },
   {
@@ -123,8 +123,8 @@
    "id": "fb0bc196",
    "metadata": {},
    "source": [
-    "# 재현율 recall: 실제 양성 값 중 양성으로 예측한 값의 비율/ 진짜양성비율\n",
-    "                           TP/(TP+FN)"
+    "# 재현율 recall: 실제 양성 값 중 양성으로 예측한 값의 비율\n",
+    " TP(1,1) FN(0,1)     TP/(TP+FN)"
    ]
   },
   {
